--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- test -->
     <div class="container">
       <div class="calc">
         <input class="calc__display" />
