--- a/index.html
+++ b/index.html
@@ -18,28 +18,57 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="./js/app.js"></script>
   </head>
   <body>
     <!-- test -->
     <div class="container">
       <div class="calc">
-        <input class="calc__display" />
+        <input class="calc__display" id="display" />
         <div class="calc__numPad">
-          <button class="calc__numPad__btn calc__numPad__btn-num0">0</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num1">1</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num2">2</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num3">3</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num4">4</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num5">5</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num6">6</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num7">7</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num8">8</button>
-          <button class="calc__numPad__btn calc__numPad__btn-num9">9</button>
-          <button class="calc__numPad__btn calc__numPad__btn-slash">/</button>
-          <button class="calc__numPad__btn calc__numPad__btn-dots">.</button>
-          <button class="calc__numPad__btn-tim calc__numPad__btn">x</button>
-          <button class="calc__numPad__btn calc__numPad__btn-mins">-</button>
-          <button class="calc__numPad__btn calc__numPad__btn-plus">+</button>
+          <button class="calc__numPad__btn calc__numPad__btn-num0 num">
+            0
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num1 num">
+            1
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num2 num">
+            2
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num3 num">
+            3
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num4 num">
+            4
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num5 num">
+            5
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num6 num">
+            6
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num7 num">
+            7
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num8 num">
+            8
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-num9 num">
+            9
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-slash ops">
+            /
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-dots ops">
+            .
+          </button>
+          <button class="calc__numPad__btn-tim ops calc__numPad__btn">x</button>
+          <button class="calc__numPad__btn calc__numPad__btn-mins ops">
+            -
+          </button>
+          <button class="calc__numPad__btn calc__numPad__btn-plus ops">
+            +
+          </button>
           <button class="calc__numPad__btn calc__numPad__btn-del">DEL</button>
           <button class="calc__numPad__btn calc__numPad__btn-equals">=</button>
           <button class="calc__numPad__btn calc__numPad__btn-resets">
